Cleanup Readme and Minor Notebook Fixes
Documentation and Function Cleanup

--- a/2-sphero-pid-control.ipynb
+++ b/2-sphero-pid-control.ipynb
@@ -867,16 +867,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_angle(-60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def normalize_angle(angle):\n",
+    "    \"\"\"\n",
+    "        Convert angle to angle in degrees from 0 to 360\n",
+    "        \n",
+    "    \"\"\"\n",
     "    if angle < 0:\n",
-    "        return normalize_angle(-angle)\n",
-    "\n",
+    "        return normalize_angle(360 + angle)\n",
     "    elif angle > 360:\n",
     "        return angle % 360\n",
     "    else:\n",
