--- a/6-combine-pid-camera.ipynb
+++ b/6-combine-pid-camera.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from SpheroController.tracablesphero import TraceableSphero"
@@ -27,9 +29,8 @@
    "source": [
     "import sphero\n",
     "\n",
-    "# Controller Functions\n",
+    "# Controller Libraries\n",
     "import time\n",
-    "\n",
     "import os\n",
     "import json\n",
     "from pprint import pprint\n",
@@ -39,55 +40,75 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tracking code\n",
-    "import cv2\n",
-    "from tracker.trackingfilter import FilterSpheroBlueCover, FilterGlow\n",
-    "\n",
-    "\n",
-    "\n",
-    "from tracker.traceable import TraceableObject\n",
-    "from tracker.trackerbase import ColorTracker\n",
-    "\n",
-    "from util import Vector2D\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# General Python Helper Functions\n",
-    "def readJsonFile(filename):\n",
-    "    '''\n",
-    "        Read a JSON file into a python dict \n",
-    "    '''\n",
-    "    with open(filename) as data_file:    \n",
-    "        data = json.load(data_file)\n",
-    "    return data"
+    "# Tracking code\n",
+    "import cv2\n",
+    "\n",
+    "# Modify from Simon Tordensky's Base \n",
+    "from tracker.trackingfilter import FilterSpheroBlueCover, FilterGlow\n",
+    "from tracker.traceable import TraceableObject\n",
+    "from tracker.trackerbase import ColorTracker\n",
+    "\n",
+    "from util import Vector2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Library written to help with tracking\n",
+    "import SpheroTeam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from SpheroTeam import normalize_angle, angle_between_points\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
    "outputs": [],
    "source": [
-    "# Config management\n",
-    "PROJ_ROOT = os.getcwd()\n",
-    "ROSTER = os.path.join(PROJ_ROOT, \"roster.json\")\n",
-    "roster = readJsonFile(ROSTER)"
+    "from SpheroTeam.util import readJsonFile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Config management\n",
+    "PROJ_ROOT = os.getcwd()\n",
+    "ROSTER = os.path.join(PROJ_ROOT, \"roster.json\")\n",
+    "roster = readJsonFile(ROSTER)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Class for managing multiple spheros\n",
@@ -102,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,46 +163,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "bots = [devices[4], devices[1]]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sphero-RWR try 0\n",
-      "Connected!\n",
-      "Sphero-YPR try 0\n",
-      "Connected!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for bot in bots:\n",
-    "    \n",
-    "    bot.disconnect()\n",
-    "    bot.connect()"
+    "# Manually pick out the robots to include\n",
+    "# example: bots = [devices[4], devices[1]]\n",
+    "activeNames = [\"Sphero-ORG\",\n",
+    "               \"Sphero-RWR\"]\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sphero-ORG try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-ORG try 1\n",
+      "Connected!\n",
+      "Sphero-RWR try 0\n",
+      "Connected!\n"
+     ]
+    }
+   ],
    "source": [
-    "for bot in bots:\n",
-    "    bot.set_rgb(0,0,0)"
+    "SpheroTeam.connect_team(bots)\n",
+    "\n"
    ]
   },
   {
@@ -190,12 +205,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE! Removes wrong byte in start of header! Byte:  13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# All robots start connnected\n",
+    "for bot in bots:\n",
+    "    \n",
+    "    bot.set_rgb(0,0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "(640, 480)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,12 +239,13 @@
     "tracker = ColorTracker()\n",
     "#Track Camera Size: \n",
     "\n",
-    "tracker.image_size\n"
+    "\n",
+    "tracker.image_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -222,31 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "traceable_glow = TraceableObject(\"GLOW\")\n",
-    "traceable_glow.filter = FilterGlow()"
+    "# traceable_glow = TraceableObject(\"GLOW\")\n",
+    "# traceable_glow.filter = FilterGlow()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "# trackable_objects = [traceable_blue]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# traceable_objects = tracker.track_objects(trackable_objects)"
@@ -254,32 +281,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "# mathematical nuances\n",
-    "def normalize_angle(angle):\n",
-    "    if angle < 0:\n",
-    "        return normalize_angle(-angle)\n",
-    "    \n",
-    "    \n",
-    "    elif angle > 360:\n",
-    "        return angle % 360\n",
-    "    else:\n",
-    "        return angle\n",
-    "\n",
-    "def angle_between_points(x1, y1, x2, y2):\n",
-    "    \n",
-    "    return math.degrees(math.atan2( y2 - y1, x2 - x1 ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# For Debugging\n",
@@ -287,6 +292,7 @@
     "    image = tracker.get_video_frame()\n",
     "    cv2.imshow(\"img\", image)\n",
     "    cv2.waitKey(0)\n",
+    "    \n",
     "    \n",
     "# For Navigation\n",
     "def get_bot_position(bot, traceable_object, tracker, samples=4, debug=False):  \n",
@@ -296,8 +302,6 @@
     "    traceable_object.screen_size = tracker.image_size\n",
     "     \n",
     "    for sample in range(samples):\n",
-    "        print(\",\"),\n",
-    "        \n",
     "        image = tracker.get_video_frame()\n",
     "        timestamp = time.time()\n",
     "        \n",
@@ -309,7 +313,7 @@
     "                ySamples.append(y)\n",
     "\n",
     "            traceable_object.add_tracking(Vector2D(x, y), timestamp)\n",
-    "            cv2.waitKey(1)\n",
+    "            cv2.waitKey(1) # is this really necessary\n",
     "\n",
     "    if debug:      \n",
     "        display_current_view(tracker)\n",
@@ -317,9 +321,7 @@
     "        \n",
     "#     return traceable_object.pos.x, traceable_object.pos.y\n",
     "    return (sum(xSamples) / len(xSamples)), (sum(ySamples) / len(ySamples))\n",
-    "#     avg_pos = \n",
-    "#     return traceable_object\n",
-    "    \n",
+    "\n",
     "\n",
     "def calibrate_bot_direction(bot, traceable_object_list, traceable_color, tracker, debug=False):\n",
     "    \"\"\"\n",
@@ -327,9 +329,11 @@
     "        \n",
     "    \"\"\"\n",
     "#     traceable_object = traceable_object_list[0]\n",
+    "    TIMEOUT = 1500  # in MILLISECONDS\n",
+    "    \n",
     "    \n",
     "    bot.set_rgb(traceable_color[0], traceable_color[1], traceable_color[2])\n",
-    "    bot.set_motion_timeout(1500)\n",
+    "    bot.set_motion_timeout(TIMEOUT)\n",
     "    startX, startY =  get_bot_position(bot, traceable_object_list[0], tracker)\n",
     "\n",
     "#     traceable_object_list = tracker.track_object(traceable_object_list)\n",
@@ -344,15 +348,12 @@
     "    print \"Start ({},{})\".format( startX, startY)\n",
     "\n",
     "    bot.roll(60, 0)\n",
-    "    time.sleep(3)\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    time.sleep(TIMEOUT / 1000) \n",
+    "\n",
     "    endX, endY       =  get_bot_position(bot, traceable_object_list[0], tracker)\n",
     "#     traceable_object_list = tracker.track_object(traceable_object_list)\n",
     "#     endX, endY = traceable_object_list[0].pos.x, traceable_object_list[0].pos.y\n",
     "      \n",
-    "    \n",
     "    print \"End   ({},{})\".format(   endX, endY)\n",
     "    offset = normalize_angle(angle_between_points(startX, startY, endX, endY))\n",
     "    \n",
@@ -372,62 +373,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# display_current_view(tracker)\n",
-    "tracklist = [traceable_blue]\n",
-    "\n",
+    "# Print what the camera is currently seeing as a debugging step\n",
+    "# display_current_view(tracker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check which bot is which\n",
+    "SpheroTeam.highlight_team(bots)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Video display\n",
-    "\n",
-    "while(True):\n",
-    "#     tracklist = tracker.track_objects(tracklist)\n",
-    "    \n",
-    "    tracker.track_objects(tracklist)\n",
-    "    cv2.waitKey(1)\n",
-    "    \n",
-    "    \n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "\n",
-    "        break \n",
-    "\n",
-    "        \n",
-    "cv2.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", , , , [369, 369, 369] | [201, 201, 201] \n",
-      "Start (369,201)\n",
-      ", , , , [451, 451, 451] | [44, 44, 44] \n",
-      "End   (451,44)\n",
-      "Angle 62.4222501095\n",
-      "wait for meok\n",
-      ", , , , [289, 289, 289] | [218, 218, 218] \n",
-      "Start (289,218)\n",
-      ", , , , [159, 159, 159] | [255, 255, 255] \n",
-      "End   (159,255)\n",
-      "Angle 164.112831497\n",
-      "wait for med\n"
+      "Sphero-ORG Battery OK | 8.05\n",
+      "Sphero-RWR Battery OK | 8.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check which bots are ready\n",
+    "SpheroTeam.print_team_status(bots)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracklist = [traceable_blue]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for bot in bots:\n",
+    "    bot.set_rgb(0, 0, 0)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Video display\n",
+    "def display_tracking_window(traceable_object_list, exitKey = \"q\"):\n",
+    "    \"\"\"\n",
+    "        Given a list of iterables, track all objects in that list.\n",
+    "        Press exitKey to quit the window\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    while(True):\n",
+    "        #     tracklist = tracker.track_objects(tracklist)\n",
+    "\n",
+    "        tracker.track_objects(tracklist)\n",
+    "        cv2.waitKey(1)\n",
+    "\n",
+    "        if cv2.waitKey(1) & 0xFF == ord(exitKey):\n",
+    "            break \n",
+    "    cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[444, 444, 445] | [319, 319, 319] \n",
+      "Start (444,319)\n",
+      "[385, 382, 379] | [289, 288, 288] \n",
+      "End   (382,288)\n",
+      "Angle 206.565051177\n",
+      "Enter anything to test next botasdf\n",
+      "[233, 233, 232] | [258, 258, 251] \n",
+      "Start (232,255)\n",
+      "[268, 267, 262] | [319, 328, 314] \n",
+      "End   (265,320)\n",
+      "Angle 63.083445383\n",
+      "Enter anything to test next bota\n"
      ]
     }
    ],
@@ -435,15 +491,120 @@
     "offsets = []\n",
     "\n",
     "for bot in bots:\n",
-    "    \n",
     "    bot.set_rgb(0, 0, 255)\n",
     "    time.sleep(2)\n",
-    "    \n",
     "    offsets.append(calibrate_bot_direction(bot, tracklist, [0, 0, 255], tracker, True))\n",
     "    bot.set_rgb(0,0,0)\n",
+    "    proceed = raw_input(\"Next Robot\")\n",
     "    \n",
-    "    proceed = raw_input(\"Check if OK to proceed\")\n",
-    "    \n"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dispatch Time 0.179999828339\n",
+      "Received unknown async msg! Header:  (255, 254, 5, 1)\n",
+      "Received unknown async msg! Header:  (255, 254, 5, 1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread SpheroReceiverThread:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\cyick\\Anaconda2\\lib\\threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\cyick\\Anaconda2\\lib\\threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"C:\\Users\\cyick\\AppData\\Roaming\\Python\\Python27\\site-packages\\sphero\\core.py\", line 415, in _receiver\n",
+      "    header = self._receive_header()\n",
+      "  File \"C:\\Users\\cyick\\AppData\\Roaming\\Python\\Python27\\site-packages\\sphero\\core.py\", line 299, in _receive_header\n",
+      "    first_byte = struct.unpack('B', raw_data)[0]\n",
+      "error: unpack requires a string argument of length 1\n",
+      "\n",
+      "Exception in thread SpheroReceiverThread:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\cyick\\Anaconda2\\lib\\threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\cyick\\Anaconda2\\lib\\threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"C:\\Users\\cyick\\AppData\\Roaming\\Python\\Python27\\site-packages\\sphero\\core.py\", line 415, in _receiver\n",
+      "    header = self._receive_header()\n",
+      "  File \"C:\\Users\\cyick\\AppData\\Roaming\\Python\\Python27\\site-packages\\sphero\\core.py\", line 299, in _receive_header\n",
+      "    first_byte = struct.unpack('B', raw_data)[0]\n",
+      "error: unpack requires a string argument of length 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "SpheroTeam.roll_sphero_team_synchronized(bots, 60, 0, offsets, 1500)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for bot in "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sphero.response.Response at 0x4ecb710>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bots[0].roll(50, 206)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sphero.response.Response at 0x6cf2c88>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bot.roll(50, 63)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -572,7 +733,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(500):\n",
@@ -617,7 +780,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ts = TraceableSphero(bot)\n",
@@ -795,14 +960,18 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n"
