Cleanup Notebook 3, Tidy Up Camera Calibration Notebook

--- a/3-sphero-group-control.ipynb
+++ b/3-sphero-group-control.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,22 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starts auto search\n",
-      "Found Sphero-RYR\n",
-      "Found Sphero-YPR\n",
-      "Found Sphero-ORG\n",
-      "Found Sphero-RPB\n",
-      "Found Sphero-GRY\n",
-      "Found Sphero-RWR\n",
-      "Found Sphero-YYP\n",
-      "Found all 7 spheros\n"
+      "Starts auto search\n"
      ]
     }
    ],
@@ -159,23 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sphero-RPB: 68:86:E7:05:12:26\n",
-      "Sphero-YPR: 68:86:E7:09:4E:74\n",
-      "Sphero-GRY: 68:86:E7:09:A9:28\n",
-      "Sphero-YYP: 68:86:E7:05:0C:4B\n",
-      "Sphero-RWR: 68:86:E7:09:A2:FE\n",
-      "Sphero-ORG: 68:86:E7:09:A6:FE\n",
-      "Sphero-RYR: 68:86:E7:05:19:AD\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "devices = []\n",
     "# Verify that these are the robots we are looking for\n",
@@ -186,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -195,12 +173,12 @@
     "# Modify this list based on which spheros you actually have available at the moment.\n",
     "\n",
     "activeBotNames = [\n",
-    "#     \"Sphero-RYR\",\n",
-    "#     \"Sphero-GRY\",\n",
-    "#     \"Sphero-YPR\",\n",
-    "#     \"Sphero-RWR\",\n",
-    "#     \"Sphero-ORG\",\n",
-    "#     \"Sphero-RPB\",\n",
+    "    \"Sphero-RYR\",\n",
+    "    \"Sphero-GRY\",\n",
+    "    \"Sphero-YPR\",\n",
+    "    \"Sphero-RWR\",\n",
+    "    \"Sphero-ORG\",\n",
+    "    \"Sphero-RPB\",\n",
     "    \"Sphero-YYP\"\n",
     "]"
    ]
@@ -215,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -315,66 +293,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test notes 4/22\n",
-    "bots = [ manager._spheros[name] for name in activeBotNames ]"
+    "bots = [ manager._spheros[name] for name in activeBotNames ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sphero-YYP try 0\n",
+      "Sphero-GRY try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-GRY try 1\n",
       "Connected!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Connect team to computer\n",
-    "connect_team(bots)"
+    "bots[1].connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
-      "Sphero-YYP Battery OK | 8.26\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Make sure everyone's battery is above 7 volts. Below that they turn off.\n",
-    "# Get roughly 2-3 hours of ontime (not continuous)\n",
-    "print_team_status(bots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Received unknown async msg! Header:  (255, 254, 5, 1)\n"
+      "Sphero-RYR try 0\n",
+      "Connected!\n",
+      "Sphero-GRY try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-GRY try 1\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-GRY try 2\n",
+      "Connected!\n",
+      "Sphero-YPR try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-YPR try 1\n",
+      "Connected!\n",
+      "Sphero-RWR try 0\n"
      ]
     },
     {
@@ -394,8 +376,83 @@
       "error: unpack requires a string argument of length 1\n",
       "\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-RWR try 1\n",
+      "Connected!\n",
+      "Sphero-ORG try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-ORG try 1\n",
+      "Connected!\n",
+      "Sphero-RPB try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-RPB try 1\n",
+      "Connected!\n",
+      "Sphero-YYP try 0\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-YYP try 1\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-YYP try 2\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-YYP try 3\n",
+      "An exception of type IOError occurred. Arguments:\n",
+      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
+      "Sphero-YYP try 4\n",
+      "Connected!\n"
+     ]
     }
    ],
+   "source": [
+    "# Connect team to computer\n",
+    "connect_team(bots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sphero-RYR Battery OK | 8.19\n",
+      "Sphero-GRY Battery OK | 8.22\n",
+      "Sphero-YPR Battery OK | 8.16\n",
+      "Sphero-RWR Battery OK | 8.21\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
+      "Sphero-ORG Battery OK | 8.2\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
+      "Sphero-RPB Battery OK | 8.26\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
+      "Sphero-YYP Battery OK | 8.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make sure everyone's battery is above 7 volts. Below that they turn off.\n",
+    "# Get roughly 2-3 hours of ontime (not continuous)\n",
+    "print_team_status(bots)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Manage sphero colors consistently\n",
     "colors = [\n",
@@ -409,9 +466,10 @@
     "    [255, 192, 203], # pink\n",
     "]\n",
     "\n",
-    "colors = [\n",
-    "     [0, 0 , 255] # B\n",
-    "]\n",
+    "# colors = [\n",
+    "#      [0, 0 , 255] # B\n",
+    "    \n",
+    "# ]\n",
     "\n",
     "# Colors to cut down\n",
     "offCols = [ [0, 0, 0] for bot in bots]\n",
@@ -443,14 +501,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Turn colors off to save power\n",
-    "set_team_colors(bots, offCols)"
+    "set_team_colors(bots, colors)\n",
+    "\n"
    ]
   },
   {
@@ -463,7 +520,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use this to calculate offsets. Repeatedly run this cell and the next cell to populate \"botAngleOffsets\"\n",
@@ -474,11 +533,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bots[0].roll(70, 60)"
+    "len(bots)\n"
    ]
   },
   {
@@ -488,6 +558,28 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "bots[0].roll(70, 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-ac10d07650b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mnullOffsets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mbot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbots\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mset_team_colors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbots\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-5ddedd909d58>\u001b[0m in \u001b[0;36mset_team_colors\u001b[0;34m(bots, colors)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mset_team_colors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbots\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbots\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mcolorTriple\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcolors\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mbot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_rgb\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolorTriple\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolorTriple\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolorTriple\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# This process needs to be tuned by hand each time the robots fall asleep / get turned on!\n",
     "# It would be nice to calibrate with the camera's help, but it's also ok if there isn't time.\n",
@@ -502,13 +594,15 @@
     "    112, \n",
     "    125, \n",
     "    73, \n",
+    "    \n",
     "    118   \n",
     "]\n",
     "\n",
     "# 2-robot demo\n",
-    "botAngleOffsets = [\n",
-    "    240, 240    \n",
-    "]\n",
+    "# botAngleOffsets = [\n",
+    "\n",
+    "#     240, 240    \n",
+    "# ]\n",
     "\n",
     "nullOffsets = [0 for bot in bots]\n",
     "set_team_colors(bots, colors)"
@@ -517,7 +611,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "highlight_team(bots)"
@@ -525,22 +621,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "run_control": {
      "marked": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dispatch Time 0.500999927521\n",
+      "Dispatch Time 0.427999973297\n",
+      "Dispatch Time 0.47100019455\n"
+     ]
+    }
+   ],
    "source": [
     "# Demo Reel: show basic polygon\n",
     "\n",
     "corners = 3\n",
+    "\n",
+    "\n",
+    "\n",
     "angles = [ i * (360 / corners) for i in range(corners)]\n",
     "\n",
     "# angles = [180]\n",
     "\n",
+    "\n",
     "TIMEOUT = 1500\n",
+    "\n",
     "\n",
     "set_team_timeout(bots, TIMEOUT)\n",
     "for angle in angles:\n",
@@ -565,6 +676,7 @@
     "\n",
     "set_team_timeout(bots, TIMEOUT)\n",
     "for lap in range(laps):\n",
+    "    \n",
     "    for angle in angles:\n",
     "        roll_sphero_team_synchronized(bots, 100, angle, botAngleOffsets, TIMEOUT)   "
    ]
@@ -572,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Demo Reel: Basic Push\n",
@@ -590,7 +704,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Demo Reel: Advanced Blind Push\n",
